<resources>
    <string name="app_name">BD_SQLite</string>

    <string name="txt_btn_altas"> AGREGAR </string>
    <string name="txt_btn_bajas"> ELIMINAR </string>
    <string name="txt_btn_cambios"> MODIFICAR </string>
    <string name="txt_btn_consultas"> BUSCAR </string>
    <string name="txt_btn_añadir"> AÑADIR </string>
    <string name="txt_btn_cancelar"> CANCELAR </string>
    <string name="txt_lbl_altas_alumnos"> Nuevo Producto </string>
    <string name="txt_lbl_num_control"> ID Producto </string>
    <string name="txt_lbl_nombre"> Nombre </string>
    <string name="txt_lbl_primer_ap"> Tipo </string>
    <string name="txt_lbl_segundo_ap"> cantidad </string>
    <string name="txt_lbl_edad"> Precio </string>
    <string name="Titulo"> Elige una opcion para trabajar </string>
    <string name="Prudcto"> Producto </string>
    <string name="Pedidos"> Pedidos </string>
    <string name="TituloProducto"> Elige una opcion </string>
    <string name="Login"> Inicia Session</string>
    <string name="ListPedidos"> Pedidos Pendientes</string>
    <string name="Pedidos_Completados"> Pedidos completados </string>

    <string-array name="Tipo_de_Producto">
        <item> Elige Tipo De Producto</item>
        <item> PACA </item>
        <item> MOLIDO </item>
        <item> GRANO </item>
        <item> ENLATADO </item>
        <item> ENBOTELLADO </item>
    </string-array>

    <string-array name="Carrera">
        <item> Seleccione una opcion </item>
        <item> Licenciatura en Admministración </item>
        <item> Contador Público </item>
        <item> Ingeniería en Industrias Alimentarias</item>
        <item> Ingeniería Mecatrónica </item>
        <item> Ingeniería en Sistemas Computacionales </item>
    </string-array>

    <string-array name="Edad">
        <item> Seleccione Cantidad </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
        <item> 51 </item>
        <item> 52 </item>
        <item> 53 </item>
        <item> 54 </item>
        <item> 55 </item>
        <item> 56 </item>
        <item> 57 </item>
        <item> 58 </item>
        <item> 59 </item>
        <item> 60 </item>
        <item> 61 </item>
        <item> 62 </item>
        <item> 63 </item>
        <item> 64 </item>
        <item> 65 </item>
        <item> 66 </item>
        <item> 67 </item>
        <item> 68 </item>
        <item> 69 </item>
        <item> 70 </item>
        <item> 71 </item>
        <item> 72 </item>
        <item> 73 </item>
        <item> 74 </item>
        <item> 75 </item>
        <item> 76 </item>
        <item> 77 </item>
        <item> 78 </item>
        <item> 79 </item>
        <item> 80 </item>
        <item> 81 </item>
        <item> 82 </item>
        <item> 83 </item>
        <item> 84 </item>
        <item> 85 </item>
        <item> 86 </item>
        <item> 87 </item>
        <item> 88 </item>
        <item> 89 </item>
        <item> 90 </item>
        <item> 100 </item>
        <item> 200 </item>
        <item> 300 </item>
        <item> 400 </item>
    </string-array>


</resources>
