<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Prudcto"
        android:textAlignment="center"
        android:textColor="@color/ColorBlanco"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:srcCompat="@mipmap/student" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TituloProducto"
        android:textAlignment="center"
        android:textColor="@color/ColorBlanco"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_AgregarPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@mipmap/database"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_altas"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_EliminarPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@mipmap/rubbishbin"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_bajas"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_ModificarPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@mipmap/pencilbutton"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_cambios"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_consultasPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@mipmap/searchingdatabase"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_consultas"
        android:textAlignment="viewStart" />

</LinearLayout>
