<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="Inicio"
        android:textAlignment="center"
        android:textColor="@color/ColorBlanco"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="40dp"
        app:srcCompat="@mipmap/student" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textColor="@color/ColorBlanco"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_productomenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@mipmap/database"
        android:onClick="abrirActivities"
        android:text="@string/Prudcto"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_pedidomenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@mipmap/rubbishbin"
        android:onClick="abrirActivities"
        android:text="@string/Pedidos"
        android:textAlignment="viewStart" />

</LinearLayout>



